--- a/src/main/java/views/client/ClientSearchView.form
+++ b/src/main/java/views/client/ClientSearchView.form
@@ -39,7 +39,7 @@
         <properties/>
         <border type="none" title="Ingrese el nombre del cliente:"/>
         <children>
-          <component id="3fe5c" class="javax.swing.JTextField" binding="searchField">
+          <component id="3fe5c" class="javax.swing.JTextField" binding="nameSearchField">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -49,7 +49,7 @@
               <text value=""/>
             </properties>
           </component>
-          <component id="c9123" class="javax.swing.JComboBox" binding="addressComboBox">
+          <component id="c9123" class="javax.swing.JComboBox" binding="cityComboBox">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
