5-8 Push Client Create
Seguir el client create

--- a/src/main/java/views/products/ProductCreateView.form
+++ b/src/main/java/views/products/ProductCreateView.form
@@ -8,7 +8,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="d5ec0" binding="productSpecsContainer" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="d5ec0" binding="productSpecsContainer" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -39,9 +39,9 @@
             <properties>
               <model>
                 <item value=""/>
-                <item value="Pantalones"/>
                 <item value="Remeras"/>
-                <item value="Zapatos"/>
+                <item value="Banderas"/>
+                <item value="Tazas"/>
               </model>
             </properties>
           </component>
@@ -51,20 +51,6 @@
             </constraints>
             <properties>
               <text value="Categoría"/>
-            </properties>
-          </component>
-          <component id="cab2a" class="javax.swing.JComboBox" binding="subCategoryComboBox">
-            <constraints>
-              <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="5758d" class="javax.swing.JLabel" binding="SubCategoryLabel">
-            <constraints>
-              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="SubCategoría:"/>
             </properties>
           </component>
           <component id="cdffb" class="javax.swing.JTextField" binding="productDescriptionField">
@@ -101,11 +87,6 @@
           </component>
         </children>
       </grid>
-      <vspacer id="52849">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
       <grid id="99696" binding="createButtonContainer" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
@@ -128,6 +109,15 @@
             </constraints>
           </hspacer>
         </children>
+      </grid>
+      <grid id="52ea0" binding="modularContainer" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children/>
       </grid>
     </children>
   </grid>
