--- a/src/main/java/views/budget/BudgetSearchView.form
+++ b/src/main/java/views/budget/BudgetSearchView.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="containerPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="582" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -113,25 +113,28 @@
               <text value="Lista de presupuestos"/>
             </properties>
           </component>
-          <vspacer id="f337e">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-            </constraints>
-          </vspacer>
-          <component id="1e854" class="javax.swing.JButton" binding="modifyButton">
-            <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Guardar modificaciones"/>
-            </properties>
-          </component>
           <component id="846ff" class="javax.swing.JButton" binding="pdfButton">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Generar PDF"/>
+            </properties>
+          </component>
+          <component id="fd9b" class="javax.swing.JButton" binding="deleteButton">
+            <constraints>
+              <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Eliminar seleccionado/s"/>
+            </properties>
+          </component>
+          <component id="1e854" class="javax.swing.JButton" binding="modifyButton">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Modificar seleccionado"/>
             </properties>
           </component>
         </children>
