--- a/src/main/java/views/client/ClientSearchView.form
+++ b/src/main/java/views/client/ClientSearchView.form
@@ -56,6 +56,7 @@
             <properties>
               <enabled value="true"/>
               <maximumRowCount value="200"/>
+              <model/>
               <name value=""/>
             </properties>
           </component>
@@ -77,7 +78,7 @@
           </component>
         </children>
       </grid>
-      <grid id="ffde2" binding="clientListButtonsContainer" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="ffde2" binding="bottomButtonsContainer" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -93,7 +94,15 @@
               <text value="Lista de clientes"/>
             </properties>
           </component>
-          <hspacer id="f09eb">
+          <component id="9d441" class="javax.swing.JButton" binding="deleteButton">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Eliminar seleccionado/s"/>
+            </properties>
+          </component>
+          <hspacer id="fcf0">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
