editable cells option REMOVED
I removed the option that allows the user to do modifications on the cell values of the jtables

--- a/src/main/java/views/budget/BudgetCreateView.form
+++ b/src/main/java/views/budget/BudgetCreateView.form
@@ -33,7 +33,11 @@
                 <children>
                   <component id="e05cd" class="javax.swing.JTable" binding="clientResultTable">
                     <constraints/>
-                    <properties/>
+                    <properties>
+                      <doubleBuffered value="false"/>
+                      <editingColumn value="-1"/>
+                      <editingRow value="-1"/>
+                    </properties>
                   </component>
                 </children>
               </scrollpane>
