--- a/src/main/java/views/budget/BudgetSearchView.form
+++ b/src/main/java/views/budget/BudgetSearchView.form
@@ -91,7 +91,10 @@
             <children>
               <component id="ba211" class="javax.swing.JTable" binding="budgetResultTable">
                 <constraints/>
-                <properties/>
+                <properties>
+                  <editingColumn value="-1"/>
+                  <editingRow value="-1"/>
+                </properties>
               </component>
             </children>
           </scrollpane>
