--- a/src/main/java/views/budget/BudgetCreateView.form
+++ b/src/main/java/views/budget/BudgetCreateView.form
@@ -272,7 +272,7 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="37be4" class="javax.swing.JTextField" binding="widthMeasureTextField">
+                  <component id="37be4" class="javax.swing.JTextField" binding="heightMeasureTextField">
                     <constraints>
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="150" height="-1"/>
@@ -280,15 +280,15 @@
                     </constraints>
                     <properties/>
                   </component>
-                  <component id="7e835" class="javax.swing.JLabel" binding="widthMeasureLabel">
+                  <component id="7e835" class="javax.swing.JLabel" binding="heightMeasureLabel">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text value="Ancho (metros):"/>
+                      <text value="Alto (metros)"/>
                     </properties>
                   </component>
-                  <component id="5feb" class="javax.swing.JTextField" binding="heightMeasureTextField">
+                  <component id="5feb" class="javax.swing.JTextField" binding="widthMeasureTextField">
                     <constraints>
                       <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="150" height="-1"/>
@@ -296,12 +296,12 @@
                     </constraints>
                     <properties/>
                   </component>
-                  <component id="c47df" class="javax.swing.JLabel" binding="heightMeasureLabel">
+                  <component id="c47df" class="javax.swing.JLabel" binding="widthMeasureLabel">
                     <constraints>
                       <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text value="Alto (metros):"/>
+                      <text value="Ancho(metros)"/>
                     </properties>
                   </component>
                 </children>
@@ -420,7 +420,7 @@
           </component>
         </children>
       </grid>
-      <grid id="9e23b" binding="budgetCreationButtonsContainer" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="9e23b" binding="budgetCreationButtonsContainer" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -428,17 +428,9 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="71a43" class="javax.swing.JButton" binding="budgetPreviewButton">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Visualizar presupuesto"/>
-            </properties>
-          </component>
           <component id="671cd" class="javax.swing.JButton" binding="budgetCreateButton">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Crear presupuesto"/>
@@ -446,12 +438,12 @@
           </component>
           <hspacer id="7a722">
             <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
           <component id="6babf" class="javax.swing.JButton" binding="deleteProductButton">
             <constraints>
-              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Eliminar producto/s"/>
